# src/config/swagger-output.json
@@ -78,7 +78,7 @@
         ]
       }
     },
-    "/score/redis/{key}": {
+    "/v1/score/redis/{key}": {
       "get": {
         "description": "",
         "parameters": [
@@ -158,7 +158,7 @@
         ]
       }
     },
-    "/score/redis/{key}/lock": {
+    "/v1/score/redis/{key}/lock": {
       "post": {
         "description": "",
         "parameters": [
@@ -190,7 +190,7 @@
         ]
       }
     },
-    "/score/sqlite/{id}": {
+    "/v1/score/sqlite/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -253,6 +253,51 @@
               "type": "object",
               "properties": {}
             }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        },
+        "security": [
+          {
+            "basicAuth": []
+          }
+        ]
+      }
+    },
+    "/v1/ollama/multi-modal/{uuid}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "model": {
+                  "example": "any"
+                },
+                "system": {
+                  "example": "any"
+                },
+                "prompt": {
+                  "example": "any"
+                },
+                "image": {
+                  "example": "any"
+                }
+              }
+            },
+            "description": "Some description..."
           }
         ],
         "responses": {
